# grepo

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix  spec.md
.github/workflows/: release.yml
dev/: project-lock-followups.md
grepo/: .gitignore
skill/grepo/: SKILL.md
skills/grepo/: SKILL.md
skills/grepo-subagent/: SKILL.md
skills/grepo-subagent/agents/: openai.yaml
skills/grepo/agents/: openai.yaml
src/: app.rs  cli.rs  error.rs  git.rs  integration_tests.rs  lib.rs  main.rs  manifest.rs  mutation_lock.rs  output.rs  project_lock.rs  registry.rs  store.rs  tarball.rs  util.rs
src/registry/: cargo.rs  npm.rs
tests/: git_integration.rs
