[package]
name = "grepo"
version = "0.1.1"
edition = "2024"
description = "Local-first read-only reference repo store for recurring project dependencies."
license = "MIT"
readme = "README.md"
repository = "https://github.com/tomrford/grepo"
homepage = "https://github.com/tomrford/grepo"
documentation = "https://docs.rs/grepo"
autotests = false

[features]
default = []
git-integration-tests = []

[[test]]
name = "git_integration"
path = "tests/git_integration.rs"
required-features = ["git-integration-tests"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
fs4 = "0.13.1"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml = "1.1.2"
