[package]
name = "grepo"
version = "0.1.2"
edition = "2024"
description = "Local-first read-only reference repo store for recurring project dependencies."
license = "MIT"
readme = "README.md"
repository = "https://github.com/tomrford/grepo"
homepage = "https://github.com/tomrford/grepo"
documentation = "https://docs.rs/grepo"
autotests = false

[features]
default = []
git-integration-tests = []

[[test]]
name = "git_integration"
path = "tests/git_integration.rs"
required-features = ["git-integration-tests"]

[dependencies]
cargo-lock = "11.0.1"
chaste-bun = "0.6.0"
chaste-yarn = { version = "0.6.0", default-features = false, features = [
    "classic",
    "berry",
] }
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
flate2 = "1.0"
fs4 = "0.13.1"
package-lock-json-parser = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
tar = "0.4"
thiserror = "2.0.18"
toml = "1.1.2"
ureq = { version = "2.10", default-features = false, features = [
    "tls",
    "json",
    "gzip",
] }
